Changes go downward, months go upward.  Please scroll to the bottom for a legend.
Changelog started February 25, 2007.

SMF Arcade 2.5 RC4                                                    xx.11.2015
================================================================================
November 2015
 + SMF 2.0.X branch support
 + SMF 2.1.X branch support
 + Added option to select E-Arcade skin
 + Added category maintenance options
 + Arcade list type available for all templates
 + Added option to view/hide information center
 + Default list now uses horizontal button navigation
 + Added additional list display options
 ! Removed PDL custom template
 ! File permission issue for some host configuration fixed
 ! Updated license & its hyperlinks
 ! Adjusted css for arcade info center
 ! Fixed arcade & game container upshrink
 ! Opting to view a report from the list now shows its specific game report
 ! Sanitized code including the removal of Heredoc syntax from the Jeza template
 ! Fixed "new" category
 ! Fixed behavior of sorting options

SMF Arcade 2.5 RC3                                                    xx.03.2015
================================================================================
March 2015
--------------------------------------------------------------------------------
 + Project taken over by Chen Zhen @ http://web-develop.ca
 + SMF 2.0.10 Support
 + PDL/Skin combo included within installation
 + Games with no type data should now auto configure

SMF Arcade 2.5 RC2                                                    xx.10.2011
================================================================================
October 2011
--------------------------------------------------------------------------------
 + SMF 2.0.1 Support

August 2010
--------------------------------------------------------------------------------
 ! Show Admin menu for users that have arcade_admin permission [Issue #431]

April 2010